package replay

import (
	"context"
	"fmt"
	"log"

	"github.com/annel0/mmo-game/internal/protocol/replay"
	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/status"
)

// ReplayServiceImpl —Ä–µ–∞–ª–∏–∑–∞—Ü–∏—è gRPC ReplayService
type ReplayServiceImpl struct {
	replay.UnimplementedReplayServiceServer
	eventStore EventStore
}

// NewReplayService —Å–æ–∑–¥–∞–µ—Ç –Ω–æ–≤—ã–π ReplayService
func NewReplayService(eventStore EventStore) *ReplayServiceImpl {
	return &ReplayServiceImpl{
		eventStore: eventStore,
	}
}

// Replay –≤–æ—Å–ø—Ä–æ–∏–∑–≤–æ–¥–∏—Ç —Å–æ–±—ã—Ç–∏—è –ø–æ —Ñ–∏–ª—å—Ç—Ä–∞–º
func (s *ReplayServiceImpl) Replay(req *replay.ReplayRequest, stream replay.ReplayService_ReplayServer) error {
	log.Printf("üé¨ Replay request: types=%v, regions=%v, limit=%d",
		req.EventTypes, req.RegionIds, req.Limit)

	// –í–∞–ª–∏–¥–∞—Ü–∏—è –∑–∞–ø—Ä–æ—Å–∞
	if err := s.validateReplayRequest(req); err != nil {
		return status.Errorf(codes.InvalidArgument, "invalid request: %v", err)
	}

	// –ü–æ–ª—É—á–∞–µ–º –∫–∞–Ω–∞–ª —Å–æ–±—ã—Ç–∏–π
	eventChan, errChan := s.eventStore.StreamEvents(stream.Context(), req)

	// –°—Ç—Ä–∏–º–∏–º —Å–æ–±—ã—Ç–∏—è –∫–ª–∏–µ–Ω—Ç—É
	for {
		select {
		case <-stream.Context().Done():
			return stream.Context().Err()

		case event, ok := <-eventChan:
			if !ok {
				// –ö–∞–Ω–∞–ª –∑–∞–∫—Ä—ã—Ç, –∑–∞–≤–µ—Ä—à–∞–µ–º —Å—Ç—Ä–∏–º
				return nil
			}

			if err := stream.Send(event); err != nil {
				return status.Errorf(codes.Internal, "failed to send event: %v", err)
			}

		case err, ok := <-errChan:
			if !ok {
				// –ö–∞–Ω–∞–ª –æ—à–∏–±–æ–∫ –∑–∞–∫—Ä—ã—Ç
				continue
			}

			if err != nil {
				return status.Errorf(codes.Internal, "event store error: %v", err)
			}
		}
	}
}

// GetEventStats –≤–æ–∑–≤—Ä–∞—â–∞–µ—Ç —Å—Ç–∞—Ç–∏—Å—Ç–∏–∫—É —Å–æ–±—ã—Ç–∏–π
func (s *ReplayServiceImpl) GetEventStats(ctx context.Context, req *replay.EventStatsRequest) (*replay.EventStatsResponse, error) {
	log.Printf("üìä EventStats request: types=%v, regions=%v, group_by=%v",
		req.EventTypes, req.RegionIds, req.GroupBy)

	// –í–∞–ª–∏–¥–∞—Ü–∏—è –∑–∞–ø—Ä–æ—Å–∞
	if err := s.validateEventStatsRequest(req); err != nil {
		return nil, status.Errorf(codes.InvalidArgument, "invalid request: %v", err)
	}

	// –ü–æ–ª—É—á–∞–µ–º —Å—Ç–∞—Ç–∏—Å—Ç–∏–∫—É –∏–∑ —Ö—Ä–∞–Ω–∏–ª–∏—â–∞
	stats, err := s.eventStore.GetEventStats(ctx, req)
	if err != nil {
		return nil, status.Errorf(codes.Internal, "failed to get event stats: %v", err)
	}

	return stats, nil
}

// GetEventTypes –≤–æ–∑–≤—Ä–∞—â–∞–µ—Ç –¥–æ—Å—Ç—É–ø–Ω—ã–µ —Ç–∏–ø—ã —Å–æ–±—ã—Ç–∏–π
func (s *ReplayServiceImpl) GetEventTypes(ctx context.Context, req *replay.EventTypesRequest) (*replay.EventTypesResponse, error) {
	log.Printf("üìã EventTypes request: start=%v, end=%v",
		req.StartTime, req.EndTime)

	// –í–∞–ª–∏–¥–∞—Ü–∏—è –∑–∞–ø—Ä–æ—Å–∞
	if err := s.validateEventTypesRequest(req); err != nil {
		return nil, status.Errorf(codes.InvalidArgument, "invalid request: %v", err)
	}

	// –ü–æ–ª—É—á–∞–µ–º —Ç–∏–ø—ã —Å–æ–±—ã—Ç–∏–π –∏–∑ —Ö—Ä–∞–Ω–∏–ª–∏—â–∞
	types, err := s.eventStore.GetEventTypes(ctx, req)
	if err != nil {
		return nil, status.Errorf(codes.Internal, "failed to get event types: %v", err)
	}

	return types, nil
}

// validateReplayRequest –≤–∞–ª–∏–¥–∏—Ä—É–µ—Ç –∑–∞–ø—Ä–æ—Å –Ω–∞ –≤–æ—Å–ø—Ä–æ–∏–∑–≤–µ–¥–µ–Ω–∏–µ
func (s *ReplayServiceImpl) validateReplayRequest(req *replay.ReplayRequest) error {
	if req.StartTime == nil {
		return fmt.Errorf("start_time is required")
	}

	if req.EndTime == nil {
		return fmt.Errorf("end_time is required")
	}

	if req.StartTime.AsTime().After(req.EndTime.AsTime()) {
		return fmt.Errorf("start_time must be before end_time")
	}

	if req.Limit < 0 {
		return fmt.Errorf("limit must be non-negative")
	}

	// –û–≥—Ä–∞–Ω–∏—á–∏–≤–∞–µ–º –º–∞–∫—Å–∏–º–∞–ª—å–Ω–æ–µ –∫–æ–ª–∏—á–µ—Å—Ç–≤–æ —Å–æ–±—ã—Ç–∏–π
	if req.Limit > 10000 {
		return fmt.Errorf("limit cannot exceed 10000")
	}

	return nil
}

// validateEventStatsRequest –≤–∞–ª–∏–¥–∏—Ä—É–µ—Ç –∑–∞–ø—Ä–æ—Å —Å—Ç–∞—Ç–∏—Å—Ç–∏–∫–∏
func (s *ReplayServiceImpl) validateEventStatsRequest(req *replay.EventStatsRequest) error {
	if req.StartTime == nil {
		return fmt.Errorf("start_time is required")
	}

	if req.EndTime == nil {
		return fmt.Errorf("end_time is required")
	}

	if req.StartTime.AsTime().After(req.EndTime.AsTime()) {
		return fmt.Errorf("start_time must be before end_time")
	}

	return nil
}

// validateEventTypesRequest –≤–∞–ª–∏–¥–∏—Ä—É–µ—Ç –∑–∞–ø—Ä–æ—Å —Ç–∏–ø–æ–≤ —Å–æ–±—ã—Ç–∏–π
func (s *ReplayServiceImpl) validateEventTypesRequest(req *replay.EventTypesRequest) error {
	if req.StartTime != nil && req.EndTime != nil {
		if req.StartTime.AsTime().After(req.EndTime.AsTime()) {
			return fmt.Errorf("start_time must be before end_time")
		}
	}

	return nil
}
